tests/suite/snapshots/suite__check__tests__check__bad_super_2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_super_2.xi:3:9]
   │
 3 │         super.x = 1
   ·         ──┬──  
   ·           ╰──── Class A has no superclass
───╯

